--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -11,6 +11,7 @@ android {
 repositories {
     maven {
         url "https://maven.regulaforensics.com/RegulaDocumentReader"
+	allowInsecureProtocol = true
     }
 }
 
